k8s/kraken-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kraken-api-service
  namespace: sandbox
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 443
      targetPort: 8888
  selector:
    app: kraken-api
