k8s/kraken-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kraken-web-service
  namespace: sandbox
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 443
      targetPort: 80
  selector:
    app: kraken-web
