k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kraken-ingress
  annotations:
    cert-manager.io/issuer: my-ca-issuer
    cert-manager.io/common-name: kraken.com
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  namespace: sandbox
spec:
  rules:
    - host: kraken.com
      http:
        paths:
          - path: /api/(.*)
            pathType: Prefix
            backend:
              service:
                name: kraken-api-service
                port:
                  number: 443
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: kraken-web-service
                port:
                  number: 443
  tls:
    - hosts:
      - kraken.com
      secretName: myingress-cert
